@@ -4,35 +4,11 @@ package ud6.eonexamenrec.musicollab;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
-
+import java.util.Set;
 
 public class AppMusicCollab {
-
-        // Devuelve una lista de músicos que dominan al menos uno de los instrumentos
-        // requeridos por la canción c, ordenados por alias alfabético.
-
-        public static List<Musico> musicosParaCancion(Cancion c, List<Musico> musicos) {
-                List<Musico> musicosCapaces = new ArrayList<>();
-
-                return musicosCapaces;
-
-        }
-
-        /*
-         * Devuelve las canciones de la lista en las que el grupo de músicos puede
-         * cubrir todos
-         * los instrumentos requeridos, ordenadas por nombre alfabético.
-         * a. Un músico no tiene por qué tocar en una canción si sus instrumentos no son
-         * requeridos.
-         * b. Un mismo músico solo puede tocar un instrumento a la vez (excepto "voz",
-         * que puede combinarse con otros).
-         */
-        public static List<Cancion> cancionesPosibles(List<Musico> grupo, List<Cancion> canciones) {
-                List<String> CancionesPosibles = new ArrayList<>();
-
-                return cancionesPosibles(grupo, canciones);
-        }
 
         public static void main(String[] args) {
 
@@ -57,16 +33,27 @@ public class AppMusicCollab {
 
                 // Músicos de ejemplo
                 List<Musico> musicos = new ArrayList<>(Arrays.asList(
-                                new Musico("Ana López", "BassQueen", List.of("bajo", "voz")),
-                                new Musico("Carlos Ruiz", "GuitarHero", List.of("guitarra", "voz")),
-                                new Musico("Luisa Pérez", "DrumStar", List.of("batería")),
-                                new Musico("Pablo Martín", "PianoMaster", List.of("piano")),
-                                new Musico("Sofía Vega", "Vocalist", List.of("voz")),
-                                new Musico("Mario Silva", "SaxKing", List.of("saxofón")),
-                                new Musico("Elena Díaz", "MultiInstrumentalist",List.of("guitarra", "piano", "voz")
-                                )));
+                                new Musico("Ana López", "BassQueen", List.of("bajo", "voz"),
+                                                new HashSet<>(Arrays.asList(canciones.get(0), canciones.get(1),
+                                                                canciones.get(5)))),
+                                new Musico("Carlos Ruiz", "GuitarHero", List.of("guitarra", "voz"),
+                                                new HashSet<>(Arrays.asList(canciones.get(0), canciones.get(4),
+                                                                canciones.get(7)))),
+                                new Musico("Luisa Pérez", "DrumStar", List.of("batería"),
+                                                new HashSet<>(Arrays.asList(canciones.get(1), canciones.get(3),
+                                                                canciones.get(6)))),
+                                new Musico("Pablo Martín", "PianoMaster", List.of("piano"),
+                                                new HashSet<>(Arrays.asList(canciones.get(0), canciones.get(2),
+                                                                canciones.get(6)))),
+                                new Musico("Sofía Vega", "Vocalist", List.of("voz"),
+                                                new HashSet<>(Arrays.asList(canciones.get(2), canciones.get(4),
+                                                                canciones.get(7)))),
+                                new Musico("Mario Silva", "SaxKing", List.of("saxofón"),
+                                                new HashSet<>(List.of(canciones.get(3)))),
+                                new Musico("Elena Díaz", "MultiInstrumentalist", List.of("guitarra", "piano", "voz"),
+                                                new HashSet<>(Arrays.asList(canciones.get(0), canciones.get(2),
+                                                                canciones.get(7))))));
 
-                
                 // Músicos para "Bohemian Rhapsody"
                 Cancion bohemian = canciones.get(0);
                 List<Musico> candidatos = musicosParaCancion(bohemian, musicos);
@@ -82,6 +69,43 @@ public class AppMusicCollab {
                 posibles.forEach(System.out::println);
 
                 System.out.println("\n");
+        }
+
+        public static List<Musico> musicosParaCancion(Cancion cancion, List<Musico> musicos) {
+                List<Musico> candidatos = new ArrayList<>();
+                List<String> instrumentosRequeridos = cancion.getInstrumentosRequeridos();
+
+                for (Musico m : musicos) {
+                        // Si el músico tiene algún instrumento que la canción requiere, es candidato
+                        for (String inst : m.getInstrumentos()) {
+                                if (instrumentosRequeridos.contains(inst)) {
+                                        candidatos.add(m);
+                                        break; // No necesitamos seguir comprobando este músico
+                                }
+                        }
+                }
+
+                return candidatos;
+        }
+
+        public static List<Cancion> cancionesPosibles(List<Musico> grupo, List<Cancion> canciones) {
+                List<Cancion> resultado = new ArrayList<>();
+
+                // Construir un set con todos los instrumentos que el grupo puede tocar
+                Set<String> instrumentosGrupo = new HashSet<>();
+                for (Musico m : grupo) {
+                        instrumentosGrupo.addAll(m.getInstrumentos());
+                }
+
+                // Comprobar para cada canción si todos sus instrumentos están en
+                // instrumentosGrupo
+                for (Cancion c : canciones) {
+                        if (instrumentosGrupo.containsAll(c.getInstrumentosRequeridos())) {
+                                resultado.add(c);
+                        }
+                }
+
+                return resultado;
         }
 
 }
